Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -922,10 +922,9 @@ msgid "Polygon"
 msgstr "Večkotnik"
 
 #: gis_data_editor.php:300 js/messages.php:294
-#, fuzzy
 #| msgid "Add column"
 msgid "Add a polygon"
-msgstr "Dodaj stolpec"
+msgstr "Dodaj večkotnik"
 
 #: gis_data_editor.php:304
 #, fuzzy
