Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-18 00:28+0200\n"
+"PO-Revision-Date: 2011-08-18 00:31+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -1223,6 +1223,10 @@ msgid ""
 "likely that your current configuration will not work anymore. Please reset "
 "your configuration to default in the <i>Settings</i> menu."
 msgstr ""
+"Konfiguracija razvrstitve grafikonov v lokalni shrambi brskalnika ni več "
+"združljiva z novejšo različico pogovornega okna nadziranja. Zelo verjetno "
+"je, da vaša trenutna konfiguracija ne bo več delovala. Prosimo, ponastavite "
+"svojo konfiguracijo na privzeto v meniju <i>Nastavitve</i>."
 
 #: js/messages.php:96
 msgid "Query cache efficiency"
