--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-18 00:31+0200\n"
+"PO-Revision-Date: 2011-08-18 00:33+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -1547,6 +1547,9 @@ msgid ""
 "This is most likely because your session expired. Reloading the page and "
 "reentering your credentials should help."
 msgstr ""
+"Med zahtevo podatkov novega grafikona je strežnik vrnil neveljavni odziv. To "
+"se je najverjetneje zgodilo, ker je vaša seja potekla. Ponovno nalaganje "
+"strani in ponovni vnos poveril bi morala pomagati."
 
 #: js/messages.php:184
 msgid "Reload page"
