Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -1754,10 +1754,9 @@ msgid "Show search criteria"
 msgstr "Prikaži iskalne pogoje"
 
 #: js/messages.php:262 libraries/tbl_select.lib.php:150
-#, fuzzy
 #| msgid "Search"
 msgid "Zoom Search"
-msgstr "Iskanje"
+msgstr "Iskanje s povečevanjem"
 
 #: js/messages.php:264
 msgid "Each point represents a data row."
