--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-18 00:34+0200\n"
+"PO-Revision-Date: 2011-08-18 00:35+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -1782,7 +1782,7 @@ msgstr ""
 
 #: js/messages.php:274
 msgid "The plot can be resized by dragging it along the bottom right corner."
-msgstr ""
+msgstr "Izris lahko povečate tako, da ga vlečete ob spodnjem desnem kotu."
 
 #: js/messages.php:276
 msgid "Strings are converted into integer for plotting"
