Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-18 00:37+0200\n"
+"PO-Revision-Date: 2011-08-18 00:40+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -10341,6 +10341,10 @@ msgid ""
 "table is supported by MySQL 5.1.6 and onwards. You may still use the server "
 "charting features however."
 msgstr ""
+"Žal vaš strežnik zbirk podatkov ne podpira beleženja v tabelo, ki je "
+"zahtevano za analiziranje dnevnikov zbirk podatov s phpMyAdmin. Beleženje v "
+"tabelo podpira MySQL 5.1.6 in novejši. Kljub temu lahko še vedno uporabljate "
+"strežniške zmožnosti izrisa grafikonov."
 
 #: server_status.php:1508
 msgid "Using the monitor:"
