--- a/po/sl.po
+++ b/po/sl.po
@@ -11701,6 +11701,8 @@ msgid ""
 "Fewer than 1,000 questions have been run against this server. The "
 "recommendations may not be accurate."
 msgstr ""
+"Na tem strežniku je bilo zagnanih manj kot 1.000 vprašanj. Priporočila morda "
+"niso točna."
 
 #: po/advisory_rules.php:12
 msgid ""
