Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -11796,10 +11796,9 @@ msgid "log_slow_queries is set to 'OFF'"
 msgstr "log_slow_queries je nastavljen na 'OFF'"
 
 #: po/advisory_rules.php:35
-#, fuzzy
 #| msgid "Clear series"
 msgid "Release Series"
-msgstr "Počisti serije"
+msgstr "Serije izdaj"
 
 #: po/advisory_rules.php:36
 msgid "The MySQL server version less then 5.1."
