--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-18 00:43+0200\n"
+"PO-Revision-Date: 2011-08-18 00:44+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -12349,7 +12349,7 @@ msgstr ""
 
 #: po/advisory_rules.php:172
 msgid "You may need to increase {key_buffer_size}."
-msgstr ""
+msgstr "Mord boste morali povečati {key_buffer_size}."
 
 #: po/advisory_rules.php:173
 #, php-format
