Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-18 00:47+0200\n"
+"PO-Revision-Date: 2011-08-18 00:48+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -12741,7 +12741,7 @@ msgstr ""
 
 #: po/advisory_rules.php:268
 msgid "concurrent_insert is set to 0"
-msgstr ""
+msgstr "concurrent_insert je nastavljeno na 0"
 
 #, fuzzy
 #~ msgid "memcached usage"
