--- a/po/tr.po
+++ b/po/tr.po
@@ -900,10 +900,9 @@ msgid "Inner Ring"
 msgstr ""
 
 #: gis_data_editor.php:248
-#, fuzzy
 #| msgid "Add a new User"
 msgid "Add a linestring"
-msgstr "Yeni Kullanıcı ekle"
+msgstr "Satır dizgisi ekle"
 
 #: gis_data_editor.php:248 gis_data_editor.php:298 js/messages.php:293
 #, fuzzy
