Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -919,10 +919,9 @@ msgid "Add a polygon"
 msgstr "Poligon ekle"
 
 #: gis_data_editor.php:304
-#, fuzzy
 #| msgid "Geometry"
 msgid "Add geometry"
-msgstr "Geometri"
+msgstr "Geometri ekle"
 
 #: gis_data_editor.php:312
 msgid ""
