--- a/po/tr.po
+++ b/po/tr.po
@@ -893,7 +893,7 @@ msgstr "Satır dizgisi"
 
 #: gis_data_editor.php:221 gis_data_editor.php:275
 msgid "Outer Ring:"
-msgstr ""
+msgstr "Dış Halka:"
 
 #: gis_data_editor.php:223 gis_data_editor.php:277 js/messages.php:290
 msgid "Inner Ring"
