Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -897,7 +897,7 @@ msgstr "Dış Halka:"
 
 #: gis_data_editor.php:223 gis_data_editor.php:277 js/messages.php:290
 msgid "Inner Ring"
-msgstr ""
+msgstr "İç Halka"
 
 #: gis_data_editor.php:248
 #| msgid "Add a new User"
