--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-18 07:13+0200\n"
+"PO-Revision-Date: 2011-08-18 07:14+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -11141,7 +11141,7 @@ msgstr "-- Yok --"
 
 #: tbl_gis_visualization.php:151
 msgid "Spatial column"
-msgstr "Uzamsal sütun"
+msgstr "Uzaysal sütun"
 
 #: tbl_gis_visualization.php:175
 msgid "Redraw"
