--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-18 07:19+0200\n"
+"PO-Revision-Date: 2011-08-18 08:58+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12051,6 +12051,15 @@ msgid ""
 "using this formula: (query_cache_size - qcache_free_memory) / "
 "qcache_queries_in_cache"
 msgstr ""
+"Şiddetli parçalanma Qcache_lowmem_prunes değerini muhtemelen (daha fazla) "
+"arttırır. Buna {query_cache_size} çok küçük olmasından dolayı çoğu düşük "
+"Sorgu önbellek belleği azalması sebep oluyor olabilir. Hemen ama kısa süreli "
+"onarım için sorgu önbelleğini (uzun bir süreliğine sorgu önbelleğini "
+"kilitleyebilir) temizleyebilirsiniz.  {query_cache_min_res_unit} değerini "
+"daha düşük bir değere dikkatlice ayarlamak da yardımcı olabilir, örn. "
+"önbellekteki sorgularınızın ortalama boyutunu bu formülü kullanarak "
+"ayarlayabilirsiniz: (query_cache_size - qcache_free_memory) / "
+"qcache_queries_in_cache"
 
 #: po/advisory_rules.php:88
 #, php-format
