Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -12055,8 +12055,8 @@ msgstr ""
 "arttırır. Buna {query_cache_size} çok küçük olmasından dolayı çoğu düşük "
 "Sorgu önbellek belleği azalması sebep oluyor olabilir. Hemen ama kısa süreli "
 "onarım için sorgu önbelleğini (uzun bir süreliğine sorgu önbelleğini "
-"kilitleyebilir) temizleyebilirsiniz.  {query_cache_min_res_unit} değerini "
-"daha düşük bir değere dikkatlice ayarlamak da yardımcı olabilir, örn. "
+"kilitleyebilir) temizleyebilirsiniz. {query_cache_min_res_unit}değerini daha "
+"düşük bir değere dikkatlice ayarlamak da yardımcı olabilir, örn. "
 "önbellekteki sorgularınızın ortalama boyutunu bu formülü kullanarak "
 "ayarlayabilirsiniz: (query_cache_size - qcache_free_memory) / "
 "qcache_queries_in_cache"
