Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-18 08:58+0200\n"
+"PO-Revision-Date: 2011-08-18 09:14+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12068,6 +12068,9 @@ msgid ""
 "that the query cache is an alternating pattern of free and used blocks. This "
 "value should be below 20%%."
 msgstr ""
+"Önbellek şu an %%%s olarak parçalanmış, %%100 parçalanma, sorgu önbelleğinin "
+"boş ve kullanılan bloklarının alternatif bir kalıp olduğu anlamına gelir. "
+"Bu değer %%20'nin altında olmalıdır."
 
 #: po/advisory_rules.php:90
 msgid "Query cache low memory prunes"
