--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-18 09:14+0200\n"
+"PO-Revision-Date: 2011-08-18 09:16+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12074,7 +12074,7 @@ msgstr ""
 
 #: po/advisory_rules.php:90
 msgid "Query cache low memory prunes"
-msgstr ""
+msgstr "Düşük sorgu önbellek belleği azalması"
 
 #: po/advisory_rules.php:91
 msgid ""
