--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-18 09:16+0200\n"
+"PO-Revision-Date: 2011-08-18 09:36+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12090,6 +12090,9 @@ msgid ""
 "overhead of maintaining the cache is likely to increase with its size, so do "
 "this in small increments and monitor the results."
 msgstr ""
+"Ancak aklınızdan çıkarmayın, baştan başa önbellek koruması muhtemelen "
+"boyutunu arttırır bu yüzden bunu küçük artışlarla yapın ve sonuçlarını "
+"izleyin."
 
 #: po/advisory_rules.php:93
 msgid ""
