--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-18 09:57+0200\n"
+"PO-Revision-Date: 2011-08-18 10:11+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12111,6 +12111,8 @@ msgid ""
 "The query cache size is above 128 MiB. Big query caches may cause "
 "significant overhead that is required to maintain the cache."
 msgstr ""
+"Sorgu önbelleği boyutu 128MiB'ın üzerinde. Büyük sorgu önbellekleri, "
+"önbelleği korumak için gereken önemli ölçüde ek yüke sebep olabilir."
 
 #: po/advisory_rules.php:97
 msgid ""
