Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -7905,7 +7905,7 @@ msgstr "END RAW"
 
 #: libraries/sqlparser.lib.php:382
 msgid "Automatically appended backtick to the end of query!"
-msgstr "Otomatik olarak sorgunun sonuna ters işaret ekle"
+msgstr "Otomatik olarak sorgunun sonuna ters işaret ekle!"
 
 #: libraries/sqlparser.lib.php:385
 msgid "Unclosed quote"
