Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -864,8 +864,9 @@ msgid "Use OpenStreetMaps as Base Layer"
 msgstr "Verwende OpenStreetMaps als Basis-Layer"
 
 #: gis_data_editor.php:134
+#, fuzzy
 msgid "SRID"
-msgstr ""
+msgstr "SRID"
 
 #: gis_data_editor.php:151 js/messages.php:289
 #: libraries/display_tbl.lib.php:663
