--- a/po/de.po
+++ b/po/de.po
@@ -890,10 +890,9 @@ msgstr "Y"
 
 #: gis_data_editor.php:202 gis_data_editor.php:246 gis_data_editor.php:296
 #: js/messages.php:292
-#, fuzzy
 #| msgid "Add routine"
 msgid "Add a point"
-msgstr "Prozedur hinzufügen"
+msgstr "Punkt hinzufügen"
 
 #: gis_data_editor.php:218 js/messages.php:287
 #, fuzzy
