--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-18 18:22+0200\n"
+"PO-Revision-Date: 2011-08-18 18:23+0200\n"
 "Last-Translator: Sven Strickroth <email@cs-ware.de>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -900,9 +900,11 @@ msgstr "Punkt hinzufügen"
 msgid "Linestring"
 msgstr "Linestring"
 
+# ist hiermit der Um-kreis gemeint?
 #: gis_data_editor.php:221 gis_data_editor.php:275
+#, fuzzy
 msgid "Outer Ring:"
-msgstr ""
+msgstr "Außenring:"
 
 #: gis_data_editor.php:223 gis_data_editor.php:277 js/messages.php:290
 msgid "Inner Ring"
