--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-18 18:24+0200\n"
+"PO-Revision-Date: 2011-08-18 18:25+0200\n"
 "Last-Translator: Sven Strickroth <email@cs-ware.de>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -906,9 +906,11 @@ msgstr "Linestring"
 msgid "Outer Ring:"
 msgstr "Außenring:"
 
+# Ist hiermit der Inkreis gemeint? http://de.wikipedia.org/wiki/Inkreis
 #: gis_data_editor.php:223 gis_data_editor.php:277 js/messages.php:290
+#, fuzzy
 msgid "Inner Ring"
-msgstr ""
+msgstr "Innenring:"
 
 #: gis_data_editor.php:248
 #, fuzzy
