--- a/po/de.po
+++ b/po/de.po
@@ -916,7 +916,7 @@ msgstr "Innenring:"
 #, fuzzy
 #| msgid "Add a new User"
 msgid "Add a linestring"
-msgstr "Neuen Benutzer hinzufügen"
+msgstr "Linestring hinzufügen"
 
 #: gis_data_editor.php:248 gis_data_editor.php:298 js/messages.php:293
 #, fuzzy
