Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -929,10 +929,9 @@ msgid "Polygon"
 msgstr "Polygon"
 
 #: gis_data_editor.php:300 js/messages.php:294
-#, fuzzy
 #| msgid "Add column"
 msgid "Add a polygon"
-msgstr "Spalte hinzufügen"
+msgstr "Polygon hinzufügen"
 
 #: gis_data_editor.php:304
 #, fuzzy
