--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-18 18:26+0200\n"
+"PO-Revision-Date: 2011-08-18 18:28+0200\n"
 "Last-Translator: Sven Strickroth <email@cs-ware.de>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -1788,7 +1788,7 @@ msgstr "Jeder Punkt stellt eine Datenreihe dar"
 
 #: js/messages.php:266
 msgid "Hovering over a point will show its label."
-msgstr ""
+msgstr "Das Überfliegen eines Punktes zeigt seine Bezeichnung."
 
 #: js/messages.php:268
 msgid "Drag and select an area in the plot to zoom into it."
