--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-18 18:31+0200\n"
+"PO-Revision-Date: 2011-08-18 18:32+0200\n"
 "Last-Translator: Sven Strickroth <email@cs-ware.de>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -4960,10 +4960,9 @@ msgid "Show function fields"
 msgstr "Funktionsfelder anzeigen"
 
 #: libraries/config/messages.inc.php:462
-#, fuzzy
 #| msgid "Where to show the table row links"
 msgid "Whether to show hint or not"
-msgstr "Wo die Datensatz-Links angezeigt werden sollen"
+msgstr "Hinweise anzeigen"
 
 #: libraries/config/messages.inc.php:463
 #, fuzzy
