--- a/po/de.po
+++ b/po/de.po
@@ -6789,10 +6789,9 @@ msgid "MySQL Spatial Extension does not support ESRI type \"%s\"."
 msgstr ""
 
 #: libraries/import/shp.php:350
-#, fuzzy
 #| msgid "This page does not contain any tables!"
 msgid "The imported file does not contain any data"
-msgstr "Diese Seite enthält keine Tabellen!"
+msgstr "Die importierte Datei enthält keine Daten"
 
 #: libraries/import/sql.php:33
 msgid "SQL compatibility mode:"
