--- a/po/de.po
+++ b/po/de.po
@@ -8133,10 +8133,9 @@ msgid "Operator"
 msgstr "Operator"
 
 #: libraries/tbl_select.lib.php:143
-#, fuzzy
 #| msgid "Search"
 msgid "Table Search"
-msgstr "Suche"
+msgstr "Tabellensuche"
 
 #: libraries/tbl_select.lib.php:229 tbl_change.php:994
 #, fuzzy
