--- a/po/de.po
+++ b/po/de.po
@@ -10495,7 +10495,7 @@ msgstr ""
 #: server_status.php:1508
 #| msgid "Pause monitor"
 msgid "Using the monitor:"
-msgstr "Benutzung der Überwachung:"
+msgstr "Verwendung der Überwachung:"
 
 #: server_status.php:1510
 #, fuzzy
