Translation update done using Pootle.

--- a/po/br.po
+++ b/po/br.po
@@ -891,10 +891,9 @@ msgstr "Y"
 
 #: gis_data_editor.php:202 gis_data_editor.php:246 gis_data_editor.php:296
 #: js/messages.php:292
-#, fuzzy
 #| msgid "Add constraints"
 msgid "Add a point"
-msgstr "Ouzhpennañ ar strishadurioù"
+msgstr "Ouzhpennañ ur poent"
 
 #: gis_data_editor.php:218 js/messages.php:287
 #, fuzzy
