--- a/po/br.po
+++ b/po/br.po
@@ -921,7 +921,7 @@ msgstr ""
 
 #: gis_data_editor.php:262 js/messages.php:288
 msgid "Polygon"
-msgstr ""
+msgstr "Lieskorneg"
 
 #: gis_data_editor.php:300 js/messages.php:294
 msgid "Add a polygon"
