--- a/po/br.po
+++ b/po/br.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-18 20:02+0200\n"
+"PO-Revision-Date: 2011-08-18 20:03+0200\n"
 "Last-Translator: Fulup <fulup.jakez@ofis-bzh.org>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: br\n"
@@ -925,7 +925,7 @@ msgstr "Lieskorneg"
 
 #: gis_data_editor.php:300 js/messages.php:294
 msgid "Add a polygon"
-msgstr ""
+msgstr "Ouzhpennañ ul lieskorneg"
 
 #: gis_data_editor.php:304
 #, fuzzy
